tests/NormalTests/paczka1/fuzzy1/23698466.err
Error in line 3: aIST5 A645 98,8
Error in line 7: xYiR A645 97,5
Error in line 18: 8g~HenQ3u3C S470 23,5
Error in line 22: G64oe A837 89,7
Error in line 23: G64oe S470 44,6
Error in line 20: 8giHenQ3u3C S470 32,4
Error in line 33: S470 A837 26,8
